--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-container {
+  margin: auto;
+  max-width: 100%;
+}
+
+@media (min-width: 992px) {
+  .custom-container {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .custom-container {
+    width: 1140px;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .custom-container {
+    width: 1200px;
+    max-width: 100%;
+  }
+}
